--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "gulp-sourcemaps": "^1.9.1",
     "gulp-typescript": "^3.1.3",
     "gulp-uglify": "^2.0.0",
+    "http-proxy": "^1.15.2",
+    "http-proxy-middleware": "^0.17.2",
     "http-server": "^0.9.0",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
