--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "test": "karma start karma.conf.js --single-run"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +25,6 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
-    "angular-in-memory-web-api": "~0.1.15",
     "angular2-notifications": "^0.4.47",
     "core-js": "^2.4.1",
     "ng2-webstorage": "^1.4.1",
