--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "~2.2.0",
-    "@angular/compiler": "~2.2.0",
-    "@angular/core": "~2.2.0",
-    "@angular/forms": "~2.2.0",
-    "@angular/http": "~2.2.0",
-    "@angular/platform-browser": "~2.2.0",
-    "@angular/platform-browser-dynamic": "~2.2.0",
-    "@angular/router": "~3.2.0",
+    "@angular/common": "~2.4.1",
+    "@angular/compiler": "~2.4.1",
+    "@angular/core": "~2.4.1",
+    "@angular/forms": "~2.4.1",
+    "@angular/http": "~2.4.1",
+    "@angular/platform-browser": "~2.4.1",
+    "@angular/platform-browser-dynamic": "~2.4.1",
+    "@angular/router": "~3.4.1",
     "angular2-notifications": "^0.4.47",
     "core-js": "^2.4.1",
     "ng2-webstorage": "^1.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "systemjs": "0.19.41",
-    "zone.js": "^0.6.26"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
@@ -50,7 +50,7 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-inline-ng2-template": "^4.0.0",
     "gulp-mocha": "^3.0.1",
-    "gulp-sass": "^2.3.2",
+    "gulp-sass": "^3.0.0",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-typescript": "^3.1.3",
@@ -58,7 +58,7 @@
     "http-proxy": "^1.15.2",
     "http-proxy-middleware": "^0.17.2",
     "http-server": "^0.9.0",
-    "jasmine-core": "~2.4.1",
+    "jasmine-core": "~2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -68,15 +68,15 @@
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
     "merge-stream": "^1.0.0",
-    "protractor": "4.0.9",
+    "protractor": "4.0.14",
     "rimraf": "^2.5.4",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.34",
-    "tslint": "^3.15.1",
+    "tslint": "^4.1.1",
     "typescript": "^2.1.4",
-    "typings": "^0.6.8",
+    "typings": "^2.1.0",
     "uglify": "^0.1.5",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "11.1.0"
   },
   "repository": {}
 }
