--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
-    "start": "gulp serve"
+    "start": "gulp serve",
+    "compodoc": "./node_modules/.bin/compodoc -p tsconfig.json"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
     "@types/node": "^6.0.46",
     "@types/selenium-webdriver": "^2.53.33",
     "canonical-path": "0.0.2",
+    "compodoc": "0.0.28",
     "concurrently": "^3.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "del": "^2.2.2",
