--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-quickstart",
-  "version": "1.0.0",
-  "description": "QuickStart package.json from the documentation, supplemented with testing support",
+  "name": "shared-resource-lock-website",
+  "version": "1.0.1",
+  "description": "A shared resource locking management website",
   "scripts": {
     "clean": "gulp clean",
     "build": "gulp build",
@@ -12,31 +12,31 @@
   "author": "",
   "licenses": [
     {
-      "type": "MIT",
-      "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
+      "type": "APACHE2",
+      "url": "https://github.com/perrich/shared-resource-lock-website/blob/master/LICENSE"
     }
   ],
   "dependencies": {
-    "@angular/common": "~2.4.1",
-    "@angular/compiler": "~2.4.1",
-    "@angular/core": "~2.4.1",
-    "@angular/forms": "~2.4.1",
-    "@angular/http": "~2.4.1",
-    "@angular/platform-browser": "~2.4.1",
-    "@angular/platform-browser-dynamic": "~2.4.1",
-    "@angular/router": "~3.4.1",
+    "@angular/common": "~2.4.0",
+    "@angular/compiler": "~2.4.0",
+    "@angular/core": "~2.4.0",
+    "@angular/forms": "~2.4.0",
+    "@angular/http": "~2.4.0",
+    "@angular/platform-browser": "~2.4.0",
+    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/router": "~3.4.0",
     "angular2-notifications": "^0.4.47",
     "core-js": "^2.4.1",
     "ng2-webstorage": "^1.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
-    "systemjs": "0.19.41",
-    "zone.js": "^0.7.4"
+    "rxjs": "5.0.3",
+    "systemjs": "0.19.45",
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.5.36",
-    "@types/node": "^6.0.46",
+    "@types/node": "^7.0.4",
     "@types/selenium-webdriver": "^2.53.33",
     "canonical-path": "0.0.2",
     "compodoc": "0.0.28",
@@ -54,9 +54,9 @@
     "gulp-mocha": "^3.0.1",
     "gulp-sass": "^3.0.0",
     "gulp-scss-lint": "^0.4.0",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-typescript": "^3.1.3",
-    "gulp-uglify": "^2.0.0",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-typescript": "^3.1.4",
+    "gulp-uglify": "^2.0.1",
     "http-proxy": "^1.15.2",
     "http-proxy-middleware": "^0.17.2",
     "http-server": "^0.9.0",
@@ -73,12 +73,13 @@
     "protractor": "4.0.14",
     "rimraf": "^2.5.4",
     "run-sequence": "^1.2.2",
-    "systemjs-builder": "^0.15.34",
+    "systemjs-builder": "^0.15.35",
     "tslint": "^4.1.1",
-    "typescript": "^2.1.4",
+    "typescript": "^2.1.5",
     "typings": "^2.1.0",
     "uglify": "^0.1.5",
-    "webdriver-manager": "11.1.0"
+    "uglify-js": "^2.7.5",
+    "webdriver-manager": "11.1.1"
   },
   "repository": {}
 }
