--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "keywords": [],
   "author": "",
+  "license": "Apache-2.0",
   "licenses": [
     {
       "type": "APACHE2",
@@ -17,20 +18,24 @@
     }
   ],
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
-    "@angular/router": "~3.4.0",
+    "@angular/animations": "^4.0.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "angular2-notifications": "^0.4.49",
     "core-js": "^2.4.1",
     "ng2-webstorage": "^1.4.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.3",
     "systemjs": "0.19.45",
+    "typescript": "^2.2.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
@@ -75,7 +80,7 @@
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.35",
     "tslint": "^4.1.1",
-    "typescript": "^2.1.5",
+    "typescript": "^2.2.1",
     "typings": "^2.1.0",
     "uglify": "^0.1.5",
     "uglify-js": "^2.7.5",
