--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "lib": ["es2015", "dom", "es2017.object"],
     "module": "system",
     "moduleResolution": "node",
     "sourceMap": true,
