--- a/app/composer.json
+++ b/app/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phroute/phroute": "^2.0",
         "monolog/monolog": "^1.17",
-        "hassankhan/config": "^0.10.0"
+        "hassankhan/config": "^0.10.0",
+		"phpmailer/phpmailer": "^5.2"
     }
 }
