--- a/php/composer.json
+++ b/php/composer.json
@@ -5,9 +5,11 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "nelmio/cors-bundle": "^1.5",
+        "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
+        "symfony/lock": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/swiftmailer-bundle": "^3.1",
